@@ -1,3 +1,7 @@
+2002-03-29  Alasdair Allan <aa@astro.ex.ac.uk>
+
+        * Fixed filehandle bug in fortran code
+
 2002-01-25  Alasdair Allan <aa@astro.ex.ac.uk>
 
         * Bug fixes to Fortran source code
